--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
     <button class="next-camera" onclick="getNextWebCam(event)" >Start Camera</button>
   </div>
   <div class="button-container">
-    <button onclick="options(true)" class="capture-button">Options</button>
+    <button onclick="options(true)" class="capture-button"><i class="fa-solid fa-gear"></i></button>
     <button onclick="saveStep(event)" class="capture-button">Save Step</button>
-    <button onclick="finishInstructions(event)" class="capture-button">Finish</button>
+    <button onclick="finishInstructions(event)" class="capture-button"><i class="fa-solid fa-print"></i></button>
   </div>
   <div id="steps"></div>
   <script>
