--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         };
       })
       .catch(function (err) {
-        console.log("An error occurred: " + err);
+        document.querySelector(".square-text").innerText = "An error occurred: " + err;
       });
     }
   }
