--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       text-align: center;
       pointer-events: none;
     }
-		.square {
+		div.square {
 			position: absolute;
 			top: 10%;
 			left: 10%;
@@ -82,7 +82,7 @@
       border: 4px solid grey;
 		}
 
-		.inset {
+		div.inset {
       position: absolute;
       top: 0;
       left: 0;
@@ -168,7 +168,7 @@
 	<div id="workbench" class="page">
     <div class="square-text">1. Click or tap to start camera.<br/>2. Tap again to capture.</div>
 		<div class="copyable square" ><canvas onclick="setCanvas(event)" id="canvas" width="800" height="600"></canvas></div>
-    <div class="copyable inset" ><canvas onclick="setCanvas(event)" width="400" height="300"></canvas></div>
+    <div class="copyable inset" ><canvas onclick="setCanvas(event)" class="inset" width="400" height="300"></canvas></div>
     <div class="copyable page-num">0</div>
     <button class="next-camera" style="display:none" onclick="getNextWebCam()" ><i class="fa fa-refresh" aria-hidden="true"></i></button>
   </div>
@@ -312,7 +312,7 @@
     var html = `
     <div class="square-text">1. Click or tap to start camera.<br/>2. Tap again to capture.</div>
 		<div class="copyable square" ><canvas onclick="setCanvas(event)" id="canvas" width="800" height="600"></canvas></div>
-    <div class="copyable inset" ><canvas onclick="setCanvas(event)" width="400" height="300"></canvas></div>
+    <div class="copyable inset" ><canvas onclick="setCanvas(event)" class="inset" width="400" height="300"></canvas></div>
     <div class="copyable page-num">0</div>
     <button class="next-camera" style="display:none" onclick="getNextWebCam()" ><i class="fa fa-refresh" aria-hidden="true"></i></button>`;
     
